Version 2.02.169 - 
=====================================
  Use status info to report merge failed and snapshot invalid lvs fields.

Version 2.02.168 - 30th November 2016
=====================================
  Display correct sync_percent on large RaidLVs
  lvmdbusd --blackboxsize <n> added, used to override default size of 16
  Allow a transiently failed RaidLV to be refreshed
  Use lv_update_and_reload() inside mirror code where it applies.
  Preserve mirrored status for temporary layered mirrors.
  Use transient raid check before repairing raid volume.
  Implement transient status check for raid volumes.
  Only log msg as debug if lvm2-lvmdbusd unit missing for D-Bus notification.
  Avoid duplicated underscore in name of extracted LV image.
  Missing stripe filler now could be also 'zero'.
  lvconvert --repair accepts --interval and --background option.
  More efficiently prepare _rmeta devices when creating a new raid LV.

Version 2.02.167 - 5th November 2016
====================================
  Use log_error in regex and sysfs filter to describe reason of failure.
  Fix blkdeactivate to deactivate dev stack if dev on top already unmounted.
  Prevent non-synced raid1 repair unless --force
  Prevent raid4 creation/conversion on non-supporting kernels
  Add direct striped -> raid4 conversion
  Fix raid4 parity image pair position on conversions from striped/raid0*
  Fix a few unconverted return code values for some lvconvert error path.
  Disable lvconvert of thin pool to raid while active.
  Disable systemd service start rate limiting for lvm2-pvscan@.service.

Version 2.02.166 - 26th September 2016
======================================
  Fix lvm2-activation-generator to read all LVM2 config sources. (2.02.155)
  Fix lvchange-rebuild-raid.sh to cope with older target versions.
  Use dm_config_parse_without_dup_node_check() to speedup metadata reading.
  Fix lvconvert --repair regression
  Fix reported origin lv field for cache volumes. (2.02.133)